HecateCompiler/obj/Debug/net9.0/HecateLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\clion_projects\C#\HecateCompiler\HecateCompiler\HecateLang.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace HecateCompiler {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class HecateLangParser : Parser {
	public const int
		INT=1, FLOAT=2, DOUBLE=3, STRING_TYPE=4, VOID=5, IF=6, ELSE=7, FOR=8, 
		WHILE=9, RETURN=10, ID=11, NUMBER=12, STRING=13, PLUS=14, MINUS=15, STAR=16, 
		SLASH=17, PLUS_PLUS=18, MINUS_MINUS=19, LT=20, GT=21, LE=22, GE=23, EQUAL=24, 
		NE=25, AND=26, OR=27, NOT=28, ASSIGN=29, PLUS_ASSIGN=30, MINUS_ASSIGN=31, 
		STAR_ASSIGN=32, SLASH_ASSIGN=33, LPAREN=34, RPAREN=35, LBRACE=36, RBRACE=37, 
		SEMICOLON=38, COMMA=39, COMMENT=40, BLOCK_COMMENT=41, WS=42;
	public const int
		RULE_program = 0, RULE_globalVar = 1, RULE_localVar = 2, RULE_function = 3, 
		RULE_parameters = 4, RULE_param = 5, RULE_statement = 6, RULE_assignment = 7, 
		RULE_ifStatement = 8, RULE_loop = 9, RULE_forInitialization = 10, RULE_forCondition = 11, 
		RULE_forIncrement = 12, RULE_incrementOrDecrement = 13, RULE_returnStatement = 14, 
		RULE_block = 15, RULE_expression = 16, RULE_term = 17, RULE_type = 18;
	public static readonly string[] ruleNames = {
		"program", "globalVar", "localVar", "function", "parameters", "param", 
		"statement", "assignment", "ifStatement", "loop", "forInitialization", 
		"forCondition", "forIncrement", "incrementOrDecrement", "returnStatement", 
		"block", "expression", "term", "type"
	};

	private static readonly string[] _LiteralNames = {
		null, "'int'", "'float'", "'double'", "'string'", "'void'", "'if'", "'else'", 
		"'for'", "'while'", "'return'", null, null, null, "'+'", "'-'", "'*'", 
		"'/'", "'++'", "'--'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", 
		"'||'", "'!'", "'='", "'+='", "'-='", "'*='", "'/='", "'('", "')'", "'{'", 
		"'}'", "';'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INT", "FLOAT", "DOUBLE", "STRING_TYPE", "VOID", "IF", "ELSE", "FOR", 
		"WHILE", "RETURN", "ID", "NUMBER", "STRING", "PLUS", "MINUS", "STAR", 
		"SLASH", "PLUS_PLUS", "MINUS_MINUS", "LT", "GT", "LE", "GE", "EQUAL", 
		"NE", "AND", "OR", "NOT", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", 
		"SLASH_ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMICOLON", "COMMA", 
		"COMMENT", "BLOCK_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "HecateLang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public HecateLangParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public GlobalVarContext[] globalVar() {
			return GetRuleContexts<GlobalVarContext>();
		}
		public GlobalVarContext globalVar(int i) {
			return GetRuleContext<GlobalVarContext>(i);
		}
		public FunctionContext[] function() {
			return GetRuleContexts<FunctionContext>();
		}
		public FunctionContext function(int i) {
			return GetRuleContext<FunctionContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << DOUBLE) | (1L << STRING_TYPE) | (1L << VOID))) != 0)) {
				{
				State = 40;
				_errHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					State = 38; globalVar();
					}
					break;

				case 2:
					{
					State = 39; function();
					}
					break;
				}
				}
				State = 44;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalVarContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode ID() { return GetToken(HecateLangParser.ID, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(HecateLangParser.SEMICOLON, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public GlobalVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalVar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterGlobalVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitGlobalVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalVarContext globalVar() {
		GlobalVarContext _localctx = new GlobalVarContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_globalVar);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45; type();
			State = 46; Match(ID);
			State = 49;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ASSIGN) {
				{
				State = 47; Match(ASSIGN);
				State = 48; expression();
				}
			}

			State = 51; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocalVarContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode ID() { return GetToken(HecateLangParser.ID, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(HecateLangParser.SEMICOLON, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public LocalVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_localVar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterLocalVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitLocalVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocalVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LocalVarContext localVar() {
		LocalVarContext _localctx = new LocalVarContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_localVar);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53; type();
			State = 54; Match(ID);
			State = 57;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ASSIGN) {
				{
				State = 55; Match(ASSIGN);
				State = 56; expression();
				}
			}

			State = 59; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode ID() { return GetToken(HecateLangParser.ID, 0); }
		public ITerminalNode LPAREN() { return GetToken(HecateLangParser.LPAREN, 0); }
		public ITerminalNode RPAREN() { return GetToken(HecateLangParser.RPAREN, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ParametersContext parameters() {
			return GetRuleContext<ParametersContext>(0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61; type();
			State = 62; Match(ID);
			State = 63; Match(LPAREN);
			State = 65;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << DOUBLE) | (1L << STRING_TYPE) | (1L << VOID))) != 0)) {
				{
				State = 64; parameters();
				}
			}

			State = 67; Match(RPAREN);
			State = 68; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametersContext : ParserRuleContext {
		public ParamContext[] param() {
			return GetRuleContexts<ParamContext>();
		}
		public ParamContext param(int i) {
			return GetRuleContext<ParamContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(HecateLangParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(HecateLangParser.COMMA, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameters; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterParameters(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitParameters(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameters(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParametersContext parameters() {
		ParametersContext _localctx = new ParametersContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_parameters);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; param();
			State = 75;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMA) {
				{
				{
				State = 71; Match(COMMA);
				State = 72; param();
				}
				}
				State = 77;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode ID() { return GetToken(HecateLangParser.ID, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_param; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterParam(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitParam(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParam(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamContext param() {
		ParamContext _localctx = new ParamContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_param);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; type();
			State = 79; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public LoopContext loop() {
			return GetRuleContext<LoopContext>(0);
		}
		public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(HecateLangParser.SEMICOLON, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_statement);
		try {
			State = 88;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 81; assignment();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 82; ifStatement();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 83; loop();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 84; returnStatement();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 85; expression();
				State = 86; Match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(HecateLangParser.ID, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(HecateLangParser.SEMICOLON, 0); }
		public ITerminalNode ASSIGN() { return GetToken(HecateLangParser.ASSIGN, 0); }
		public ITerminalNode PLUS_ASSIGN() { return GetToken(HecateLangParser.PLUS_ASSIGN, 0); }
		public ITerminalNode MINUS_ASSIGN() { return GetToken(HecateLangParser.MINUS_ASSIGN, 0); }
		public ITerminalNode STAR_ASSIGN() { return GetToken(HecateLangParser.STAR_ASSIGN, 0); }
		public ITerminalNode SLASH_ASSIGN() { return GetToken(HecateLangParser.SLASH_ASSIGN, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_assignment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; Match(ID);
			State = 91;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSIGN) | (1L << PLUS_ASSIGN) | (1L << MINUS_ASSIGN) | (1L << STAR_ASSIGN) | (1L << SLASH_ASSIGN))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			State = 92; expression();
			State = 93; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStatementContext : ParserRuleContext {
		public ITerminalNode IF() { return GetToken(HecateLangParser.IF, 0); }
		public ITerminalNode LPAREN() { return GetToken(HecateLangParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(HecateLangParser.RPAREN, 0); }
		public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public ITerminalNode ELSE() { return GetToken(HecateLangParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterIfStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitIfStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfStatementContext ifStatement() {
		IfStatementContext _localctx = new IfStatementContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_ifStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; Match(IF);
			State = 96; Match(LPAREN);
			State = 97; expression();
			State = 98; Match(RPAREN);
			State = 99; block();
			State = 102;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ELSE) {
				{
				State = 100; Match(ELSE);
				State = 101; block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoopContext : ParserRuleContext {
		public ITerminalNode FOR() { return GetToken(HecateLangParser.FOR, 0); }
		public ITerminalNode LPAREN() { return GetToken(HecateLangParser.LPAREN, 0); }
		public ForInitializationContext forInitialization() {
			return GetRuleContext<ForInitializationContext>(0);
		}
		public ITerminalNode[] SEMICOLON() { return GetTokens(HecateLangParser.SEMICOLON); }
		public ITerminalNode SEMICOLON(int i) {
			return GetToken(HecateLangParser.SEMICOLON, i);
		}
		public ForConditionContext forCondition() {
			return GetRuleContext<ForConditionContext>(0);
		}
		public ForIncrementContext forIncrement() {
			return GetRuleContext<ForIncrementContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(HecateLangParser.RPAREN, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode WHILE() { return GetToken(HecateLangParser.WHILE, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public LoopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterLoop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitLoop(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LoopContext loop() {
		LoopContext _localctx = new LoopContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_loop);
		try {
			State = 120;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case FOR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 104; Match(FOR);
				State = 105; Match(LPAREN);
				State = 106; forInitialization();
				State = 107; Match(SEMICOLON);
				State = 108; forCondition();
				State = 109; Match(SEMICOLON);
				State = 110; forIncrement();
				State = 111; Match(RPAREN);
				State = 112; block();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 114; Match(WHILE);
				State = 115; Match(LPAREN);
				State = 116; expression();
				State = 117; Match(RPAREN);
				State = 118; block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForInitializationContext : ParserRuleContext {
		public LocalVarContext localVar() {
			return GetRuleContext<LocalVarContext>(0);
		}
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public IncrementOrDecrementContext incrementOrDecrement() {
			return GetRuleContext<IncrementOrDecrementContext>(0);
		}
		public ForInitializationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_forInitialization; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.EnterForInitialization(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHecateLangListener typedListener = listener as IHecateLangListener;
			if (typedListener != null) typedListener.ExitForInitialization(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHecateLangVisitor<TResult> typedVisitor = visitor as IHecateLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForInitialization(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ForInitializationContext forInitialization() {
		ForInitializationContext _localctx = new ForInitializationContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_forInitialization);
		try {
			State = 125;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,9,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 122; localVar();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 123; assignment();
				}
				break;
